Set up to trace predict_dna_sequence_annotated line by line

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9ce7fcfa",
    "metadata": {},
    "outputs": [],
@@ -20,14 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba0c7a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "id": "f646044c",
    "metadata": {},
    "outputs": [
@@ -52,7 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "5f3adf43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1e593822",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "1e79d29c",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "58014e2e",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4be053bc",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,8 @@
     }
    ],
    "source": [
-    "print(codon_tok.vocab)"
+    "print(codon_tok.vocab)\n",
+    "dir(codon_tok)"
    ]
   },
   {
@@ -268,6 +269,87 @@
    "source": [
     "codon_sequence = \"m_atg a_gcc e_gaa __taa\"\n",
     "view_attention(codon_tok, codon_mdl, codon_sequence, view='model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b42a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Union, List\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    BatchEncoding,\n",
+    "    BigBirdConfig,\n",
+    "    BigBirdForMaskedLM,\n",
+    "    PreTrainedTokenizerFast,\n",
+    ")\n",
+    "\n",
+    "from CodonTransformer.CodonPrediction import predict_dna_sequence\n",
+    "\n",
+    "from CodonTransformer.CodonUtils import (\n",
+    "    AMINO_ACID_TO_INDEX,\n",
+    "    INDEX2TOKEN,\n",
+    "    NUM_ORGANISMS,\n",
+    "    ORGANISM2ID,\n",
+    "    TOKEN2INDEX,\n",
+    "    DNASequencePrediction,\n",
+    ")\n",
+    "from CodonTransformer.CodonJupyter import format_model_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8577e7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def predict_dna_sequencen_annotated(\n",
+    "    protein: str,\n",
+    "    organism: Union[int, str],\n",
+    "    device: torch.device,\n",
+    "    tokenizer: Union[str, PreTrainedTokenizerFast] = None,\n",
+    "    model: Union[str, torch.nn.Module] = None,\n",
+    "    attention_type: str = \"original_full\",\n",
+    "    deterministic: bool = True,\n",
+    "    temperature: float = 0.2,\n",
+    "    top_p: float = 0.95,\n",
+    "    num_sequences: int = 1,\n",
+    "    match_protein: bool = False,\n",
+    ") -> Union[DNASequencePrediction, List[DNASequencePrediction]]:\n",
+    "    print(f\"Predicting DNA sequence for protein: {protein}, organism: {organism}\")\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"adibvafa/CodonTransformer\")\n",
+    "model = BigBirdForMaskedLM.from_pretrained(\"adibvafa/CodonTransformer\").to(device)\n",
+    "\n",
+    "# Set your input data\n",
+    "protein = \"MALWMRLLPLLALLALWGPDPAAAFVNQHLCGSHLVEALYLVCGERGFFYTPKTRREAEDLQVGQVELGG\"\n",
+    "organism = \"Escherichia coli general\"\n",
+    "\n",
+    "result = predict_dna_sequencen_annotated(\n",
+    "    protein=\"MALWMRLLPLLALLALWGPDPAAAFVNQHLCGSHLVEALYLVCGERGFFYTPKTRREAEDLQVGQVELGG\",\n",
+    "    organism=\"Escherichia coli general\",\n",
+    "    device=device,\n",
+    "    tokenizer=tokenizer,\n",
+    "    model=model\n",
+    ")\n",
+    "print(result)\n",
+    "\n",
+    "# Predict with CodonTransformer\n",
+    "output = predict_dna_sequence(\n",
+    "    protein=protein,\n",
+    "    organism=organism,\n",
+    "    device=device,\n",
+    "    tokenizer=tokenizer,\n",
+    "    model=model,\n",
+    "    attention_type=\"original_full\",\n",
+    "    deterministic=True\n",
+    ")\n",
+    "print(format_model_output(output))"
    ]
   }
  ],
